	PR c/69835 	* common.opt (Wnonnull-compare): New warning. 	* doc/invoke.texi (-Wnonnull): Remove text about comparison 	of arguments against NULL. 	(-Wnonnull-compare): Document. 	* Makefile.in (OBJS): Add gimple-ssa-nonnull-compare.o. 	* tree-pass.h (make_pass_warn_nonnull_compare): Declare. 	* passes.def (pass_warn_nonnull_compare): Add. 	* gimple-ssa-nonnull-compare.c: New file. c-family/ 	* c.opt (Wnonnull-compare): Enable for -Wall. c/ 	* c-typeck.c (build_binary_op): Revert 2015-09-09 change. cp/ 	* typeck.c (cp_build_binary_op): Revert 2015-09-09 change. testsuite/ 	* c-c++-common/nonnull-1.c: Use -Wnonnull-compare instead of 	-Wnonnull in dg-options. 	* c-c++-common/nonnull-2.c: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@233472 138bc75d-0d04-0410-961f-82ee72b054a4